Fix header sizing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,6 @@
 /* Re-define basic styles that were cleared by the reset.css.
 This ensures that formatting is consistent across browsers. */
-.header {
-  padding: 40px;
-  text-align: center;
-  background: #7393B3;
-  color: white;
-  font-size: 25px;
-}
 
-header.page-header > h1 {
-    font: bold calc(1em + 2 * (100vw - 120px) / 100) 'Dancing Script', cursive,
-        fantasy;
-    margin: 2%;
-}
 body {font: 12pt "Avenir", "Helvetica", "Arial", sans-serif;color: #000000}
 h1 { font-size: 4em; color: #FFFFFF; text-align: center;}
 h2 { font-size: 1.5em; color: #FFFFFF; text-align: center;}
@@ -52,6 +40,17 @@ header, main, footer {
 Header
 Contains title, explanatory text and checkboxes for tags.
 */
+/* Style the header with a grey background and some padding */
+.header {
+  overflow: hidden;
+  background-color: #7393B3;
+  padding: 20px 10px;
+}
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
 
 #tagselector {
     color: black;
